# job-controller

./: .gitignore  .golangci.yml  ARCHITECTURE.md  Makefile  README.md  docker-compose.yml  go.mod  worker_registry.yaml
.github/workflows/: ci.yml
bench/: README.md  baseline.json  chaos-result.json  chaos-sigterm.sh  chaos.sh
bench/concurrent/: main.go  percentile_test.go
bench/regress/: main.go  regress_test.go
cmd/controller/: main.go
cmd/reaper/: main.go
infra/: Dockerfile.controller  Dockerfile.worker
internal/api/: api.go  api_test.go
internal/checkpoint/: checkpoint.go  checkpoint_test.go  fuzz_test.go
internal/cluster/: cluster.go  cluster_test.go  inmemory.go  integration_test.go  redis.go
internal/config/: config.go  config_test.go
internal/docker/: client.go  labels.go
internal/recovery/: recovery.go
internal/registry/: chaos_recovery_test.go  registry.go  registry_test.go
internal/signals/: signals.go
internal/store/: fsutil.go  schema.sql  store.go  store_test.go  transition_test.go
internal/supervisor/: event.go  supervisor.go  supervisor_test.go
worker/: CMakeLists.txt
worker/src/: checkpoint.cpp  checkpoint.h  compute.cpp  compute.h  main.cpp  matmul.cpp  matmul.h  wordcount.cpp  wordcount.h
worker/tests/: test_checkpoint.cpp  test_compute.cpp  test_matmul.cpp  test_resume_property.cpp  test_wordcount.cpp
